--- a/pom.xml
+++ b/pom.xml
@@ -3,18 +3,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.exmaple</groupId>
+    <groupId>com.iqmsoft</groupId>
     <artifactId>SpringBootJAXB</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
     <name>spring-boot-xml</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Spring Boot JAXB</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.3.RELEASE</version>
+        <version>2.5.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
